--- a/rpc/client/pom.xml
+++ b/rpc/client/pom.xml
@@ -9,18 +9,22 @@
         <version>${project.version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-web-commons</artifactId>
+    <artifactId>${app.name}-rpc-client</artifactId>
     <version>${project.version}</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-velocity</artifactId>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>${app.name}-services-home</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-rpc-commons</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
+    
 </project>
