--- a/rpc/commons/pom.xml
+++ b/rpc/commons/pom.xml
@@ -9,18 +9,8 @@
         <version>${project.version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-web-commons</artifactId>
+    <artifactId>${app.name}-rpc-commons</artifactId>
     <version>${project.version}</version>
     <packaging>jar</packaging>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-velocity</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
+    
 </project>
