--- a/rpc/server/pom.xml
+++ b/rpc/server/pom.xml
@@ -9,18 +9,21 @@
         <version>${project.version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-web-commons</artifactId>
+    <artifactId>${app.name}-rpc-server</artifactId>
     <version>${project.version}</version>
-    <packaging>jar</packaging>
-
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-velocity</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-services-home-impl</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-rpc-commons</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
