--- a/view/static/pom.xml
+++ b/view/static/pom.xml
@@ -15,6 +15,12 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-rpc-client</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>${app.name}-web-home</artifactId>
             <version>${project.version}</version>
             <type>jar</type>
