--- a/rpc/commons/pom.xml
+++ b/rpc/commons/pom.xml
@@ -12,5 +12,11 @@
     <artifactId>${app.name}-rpc-commons</artifactId>
     <version>${project.version}</version>
     <packaging>jar</packaging>
-    
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+    </dependencies>
 </project>
