--- a/rpc/commons/pom.xml
+++ b/rpc/commons/pom.xml
@@ -14,9 +14,9 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.7</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
         </dependency>
     </dependencies>
 </project>
