--- a/services/home-impl/src/test/resources/application.yml
+++ b/services/home-impl/src/test/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
     #datasource
     datasource:
-        url: jdbc:mysql://127.0.0.1:3306/user
+        url: jdbc:mysql://127.0.0.1:3306/user?characterEncoding=UTF-8
         driverClassName: com.mysql.jdbc.Driver
         username: root
         password: root
