--- a/rpc/commons/pom.xml
+++ b/rpc/commons/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 </project>
