--- a/rpc/httpServer/pom.xml
+++ b/rpc/httpServer/pom.xml
@@ -9,26 +9,19 @@
         <version>${project.version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-web-commons</artifactId>
+    <artifactId>${app.name}-rpc-http-server</artifactId>
     <version>${project.version}</version>
-    <packaging>jar</packaging>
-
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-velocity</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-rpc-server</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
     </dependencies>
 </project>
