--- a/rpc/commons/pom.xml
+++ b/rpc/commons/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>mina-core</artifactId>
             <version>2.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.32.Final</version>
+        </dependency>
     </dependencies>
 </project>
