引入eureka服务发现

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>rpc/client</module>
         <module>rpc/server</module>
         <module>rpc/httpServer</module>
+        <module>DS/client</module>
+        <module>DS/server</module>
         <module>services/home</module>
         <module>services/home-impl</module>
         <module>services/commons</module>
