--- a/rpc/client/pom.xml
+++ b/rpc/client/pom.xml
@@ -25,6 +25,12 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-ds-client</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
 </project>
