--- a/view/static/src/main/resources/application.yml
+++ b/view/static/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
     port: 8080
 spring:
+    application:
+        name: rpc-server
     velocity:
         checkTemplateLocation: true
         properties:
@@ -25,3 +27,12 @@ logging:
         org:
             springframework:
                 web: DEBUG
+
+eureka:
+  # these are settings for the client that gets services
+  client:
+    # enable these two settings if you want discovery to work
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://192.168.1.104:8080/eureka/v2
