--- a/rpc/httpServer/pom.xml
+++ b/rpc/httpServer/pom.xml
@@ -26,10 +26,8 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${app.name}-ds-server</artifactId>
-            <version>${project.version}</version>
-            <type>jar</type>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 </project>
