--- a/rpc/httpServer/src/main/resources/application.yml
+++ b/rpc/httpServer/src/main/resources/application.yml
@@ -50,3 +50,12 @@ logging:
             springframework:
                 web: DEBUG
             hibernate: ERROR
+
+eureka:
+  # these are settings for the client that gets services
+  client:
+    # enable these two settings if you want discovery to work
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://192.168.1.108:8761/eureka/
