--- a/rpc/server/src/main/resources/application.yml
+++ b/rpc/server/src/main/resources/application.yml
@@ -58,4 +58,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://192.168.1.104:8080/eureka/v2/
+      defaultZone: http://192.168.1.108:8761/eureka/
