抽离所有的端口与ip设置

--- a/rpc/server/src/main/resources/application.yml
+++ b/rpc/server/src/main/resources/application.yml
@@ -52,10 +52,13 @@ logging:
             hibernate: ERROR
 
 eureka:
-  # these are settings for the client that gets services
-  client:
-    # enable these two settings if you want discovery to work
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://192.168.1.108:8761/eureka/
+    # these are settings for the client that gets services
+    client:
+        # enable these two settings if you want discovery to work
+        registerWithEureka: true
+        fetchRegistry: true
+        serviceUrl:
+            defaultZone: http://192.168.1.108:8761/eureka/
+rpc:
+    server:
+        port: 8000
