--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>rpc/remote/netty</module>
         <module>rpc/remote/nio</module>
         <module>rpc/server</module>
+        <module>rpc/eureka-server</module>
         <module>rpc/httpServer</module>
         <module>services/home</module>
         <module>services/home-impl</module>
@@ -32,7 +33,6 @@
         <module>web/commons</module>
         <module>view/static</module>
         <module>view/templates</module>
-        <module>eureka-server</module>
     </modules>
 
     <properties>
