--- a/rpc/eureka-server/src/main/resources/application.yml
+++ b/rpc/eureka-server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
-    port: 8080
+    port: 6761
+    context-path: /discovery
 spring:
     application:
         name: eureka-server
@@ -11,6 +12,6 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://localhost:8080/discovery/eureka/
+            defaultZone: http://localhost:6761/discovery/eureka/
         healthcheck:
               enabled: true
