--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,13 @@
         <module>rpc/remote/mina</module>
         <module>rpc/remote/netty</module>
         <module>rpc/remote/nio</module>
-        <module>rpc/server</module>
+        <module>rpc/server/commons</module>
+        <module>rpc/server/bio</module>
+        <module>rpc/server/http</module>
+        <module>rpc/server/mina</module>
+        <module>rpc/server/netty</module>
+        <module>rpc/server/nio</module>
         <module>rpc/eureka-server</module>
-        <module>rpc/httpServer</module>
         <module>services/home</module>
         <module>services/home-impl</module>
         <module>services/commons</module>
