--- a/services/home-impl/pom.xml
+++ b/services/home-impl/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <artifactId>${app.name}-services-home-impl</artifactId>
     <version>${project.version}</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -23,6 +23,12 @@
             <groupId>com.jeremie.spring</groupId>
             <artifactId>${app.name}-services-home</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-rpc-server-mina</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
