初步切换rpc初始化方式,多服务端尚未完成

--- a/view/static/src/main/resources/application.yml
+++ b/view/static/src/main/resources/application.yml
@@ -44,4 +44,15 @@ com:
             default-ip: 127.0.0.1
             default-nio-client-port: 8001
             #连接方式：目前支持mina,netty,nio,bio,http(default:mina)
-            connection-method: mina
+            services:
+                -
+                    packages:
+                        - com.jeremie.spring.*.jpaService
+                    name: home-test
+                    method: mina
+                -
+                    packages:
+                        - com.jeremie.test.rpc.service
+                    name: rpc-test
+                    method: http
+
