--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,20 @@
             <scope>runtime</scope>
         </dependency>-->
     </dependencies>
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>Team Nexus Repository</name>
+            <url>http://202.116.161.33:8081/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>nexus</id>
+            <name>Team Nexus Repository</name>
+            <url>http://202.116.161.33:8081/nexus/content/groups/public</url>
+        </pluginRepository>
+    </pluginRepositories>
     <build>
         <plugins>
             <plugin>
