web页面与AdolService测试服务

--- a/view/static/src/main/resources/application.yml
+++ b/view/static/src/main/resources/application.yml
@@ -52,7 +52,7 @@ com:
                     method: mina
                 -
                     packages:
-                        - com.jeremie.test.rpc.service
-                    name: rpc-test
+                        - com.adol.spring.*.service
+                    name: adol-test
                     method: http
 
