--- a/web/home/pom.xml
+++ b/web/home/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>${app.name}-services-adol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>${app.name}-web-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
