--- a/rpc/eureka-server/src/main/resources/application.yml
+++ b/rpc/eureka-server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
-    port: 6761
+    port: 8080
     context-path: /discovery
+management:
+    port: 8081
 spring:
     application:
         name: eureka-server
@@ -12,6 +14,6 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://localhost:6761/discovery/eureka/
+            defaultZone: http://localhost:8080/discovery/eureka/
         healthcheck:
               enabled: true
