--- a/rpc/server/commons/pom.xml
+++ b/rpc/server/commons/pom.xml
@@ -19,5 +19,9 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
