添加监控服务器状态

--- a/rpc/remote/netty/pom.xml
+++ b/rpc/remote/netty/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>${app.name}-rpc-remote-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.32.Final</version>
+        </dependency>
     </dependencies>
     
 </project>
