--- a/rpc/server/netty/pom.xml
+++ b/rpc/server/netty/pom.xml
@@ -19,5 +19,10 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.32.Final</version>
+        </dependency>
     </dependencies>
 </project>
