--- a/rpc/remote/mina/pom.xml
+++ b/rpc/remote/mina/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>${app.name}-rpc-remote-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
     
 </project>
