--- a/rpc/server/mina/pom.xml
+++ b/rpc/server/mina/pom.xml
@@ -19,5 +19,10 @@
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 </project>
