--- a/rpc/monitor/pom.xml
+++ b/rpc/monitor/pom.xml
@@ -9,17 +9,36 @@
         <version>${project.version}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>${app.name}-rpc-commons</artifactId>
+    <artifactId>${app.name}-monitor-simple</artifactId>
     <version>${project.version}</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>monitor-simple</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
