--- a/rpc/eureka-server/src/main/resources/application.yml
+++ b/rpc/eureka-server/src/main/resources/application.yml
@@ -13,5 +13,9 @@ eureka:
         fetchRegistry: true
         serviceUrl:
             defaultZone: http://localhost:8080/discovery/eureka/
-        healthcheck:
-              enabled: true
+logging:
+    file: discovery.log
+    level:
+        org:
+            springframework:
+                web: DEBUG
