初步添加负载均衡,删除不必要的引用

--- a/view/static/src/main/resources/application.yml
+++ b/view/static/src/main/resources/application.yml
@@ -50,10 +50,12 @@ com:
                 -
                     name: home-test
                     method: mina
+                    loadBalance: random
                     packages:
                         - com.jeremie.spring.*.jpaService
                 -
                     name: adol-test
                     method: http
+                    loadBalance: random
                     packages:
                         - com.adol.spring.*.jpaService
