--- a/services/home-impl/src/main/resources/application.yml
+++ b/services/home-impl/src/main/resources/application.yml
@@ -63,8 +63,4 @@ eureka:
         serviceUrl:
             defaultZone: http://192.168.1.156:8080/discovery/eureka/
     instance:
-        non-secure-port:  ${com.jeremie.rpc.server-port}
-com:
-    jeremie:
-        rpc:
-          server-port: 8000
+        non-secure-port:  12443
