稍微修改一下测试的端口号

--- a/services/adol-impl/src/main/resources/application.yml
+++ b/services/adol-impl/src/main/resources/application.yml
@@ -62,4 +62,5 @@ eureka:
         serviceUrl:
             defaultZone: http://192.168.1.156:8080/discovery/eureka/
     instance:
-        non-secure-port:  8081
+        #beacause of http connect
+        non-secure-port:  ${server.port}
