--- a/rpc/eureka-server/src/main/resources/application.yml
+++ b/rpc/eureka-server/src/main/resources/application.yml
@@ -13,6 +13,17 @@ eureka:
         fetchRegistry: true
         serviceUrl:
             defaultZone: http://localhost:8080/discovery/eureka/
+#eureka:
+#    # these are settings for the client that gets services
+#    client:
+#        # enable these two settings if you want discovery to work
+#        registerWithEureka: true
+#        fetchRegistry: true
+#        serviceUrl:
+#            defaultZone: http://192.168.1.156:8080/discovery/eureka/
+#            slave: http://127.0.0.1:8080/discovery/eureka/
+#    server:
+#        registry-sync-retries:  10
 logging:
     file: discovery.log
     level:
