--- a/services/home-impl/src/main/resources/application.yml
+++ b/services/home-impl/src/main/resources/application.yml
@@ -56,11 +56,10 @@ logging:
 eureka:
     # these are settings for the client that gets services
     client:
-        registry-refresh-single-vip-address: home
         # enable these two settings if you want discovery to work
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://192.168.1.156:8080/discovery/eureka/
+            defaultZone: http://192.168.1.156:8080//eureka/v2
     instance:
         non-secure-port:  16752
