--- a/services/home-impl/src/main/resources/application.yml
+++ b/services/home-impl/src/main/resources/application.yml
@@ -60,6 +60,6 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: http://192.168.1.156:8080//eureka/v2
+            defaultZone: http://192.168.1.156:8080/discovery/eureka/
     instance:
         non-secure-port:  16752
